--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1138,8 +1138,14 @@ select {
 .z-50 {
 	z-index: 50;
 }
+.z-10 {
+	z-index: 10;
+}
 .z-40 {
 	z-index: 40;
+}
+.order-first {
+	order: -9999;
 }
 .col-span-6 {
 	grid-column: span 6 / span 6;
@@ -1153,9 +1159,6 @@ select {
 .m-0 {
 	margin: 0px;
 }
-.m-16 {
-	margin: 4rem;
-}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -1168,17 +1171,21 @@ select {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
-.mx-20 {
-	margin-left: 5rem;
-	margin-right: 5rem;
-}
-.my-32 {
-	margin-top: 8rem;
-	margin-bottom: 8rem;
+.mx-6 {
+	margin-left: 1.5rem;
+	margin-right: 1.5rem;
 }
 .my-16 {
 	margin-top: 4rem;
 	margin-bottom: 4rem;
+}
+.mx-0 {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+.my-0 {
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
 .my-12 {
 	margin-top: 3rem;
@@ -1191,6 +1198,10 @@ select {
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
+}
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1267,14 +1278,29 @@ select {
 .mb-8 {
 	margin-bottom: 2rem;
 }
+.mr-1 {
+	margin-right: 0.25rem;
+}
 .mt-12 {
 	margin-top: 3rem;
+}
+.-mt-1\.5 {
+	margin-top: -0.375rem;
+}
+.-mt-1 {
+	margin-top: -0.25rem;
+}
+.ml-28 {
+	margin-left: 7rem;
 }
 .ml-auto {
 	margin-left: auto;
 }
-.mr-1 {
-	margin-right: 0.25rem;
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
+.mr-4 {
+	margin-right: 1rem;
 }
 .mr-8 {
 	margin-right: 2rem;
@@ -1288,14 +1314,11 @@ select {
 .mt-16 {
 	margin-top: 4rem;
 }
-.mr-4 {
-	margin-right: 1rem;
-}
-.mb-2 {
-	margin-bottom: 0.5rem;
-}
 .mb-12 {
 	margin-bottom: 3rem;
+}
+.ml-0 {
+	margin-left: 0px;
 }
 .block {
 	display: block;
@@ -1345,14 +1368,17 @@ select {
 .h-20 {
 	height: 5rem;
 }
-.h-52 {
-	height: 13rem;
-}
-.h-screen {
-	height: 100vh;
+.h-40 {
+	height: 10rem;
 }
 .h-160 {
 	height: 40rem;
+}
+.h-24 {
+	height: 6rem;
+}
+.h-screen {
+	height: 100vh;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1405,8 +1431,14 @@ select {
 .w-3\/5 {
 	width: 60%;
 }
+.w-96 {
+	width: 24rem;
+}
 .w-134 {
 	width: 34rem;
+}
+.w-256 {
+	width: 64rem;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1549,14 +1581,14 @@ select {
 .gap-1 {
 	gap: 0.25rem;
 }
-.gap-8 {
-	gap: 2rem;
-}
 .gap-28 {
 	gap: 7rem;
 }
 .gap-36 {
 	gap: 9rem;
+}
+.gap-8 {
+	gap: 2rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
@@ -1646,6 +1678,9 @@ select {
 .border-4 {
 	border-width: 4px;
 }
+.border-8 {
+	border-width: 8px;
+}
 .border-b-2 {
 	border-bottom-width: 2px;
 }
@@ -1664,14 +1699,14 @@ select {
 .border-t-2 {
 	border-top-width: 2px;
 }
-.border-l-8 {
-	border-left-width: 8px;
+.border-t-4 {
+	border-top-width: 4px;
 }
-.border-t-8 {
-	border-top-width: 8px;
+.border-r-4 {
+	border-right-width: 4px;
 }
-.border-r-8 {
-	border-right-width: 8px;
+.border-b-3 {
+	border-bottom-width: 3px;
 }
 .border-solid {
 	border-style: solid;
@@ -1703,13 +1738,25 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(127, 29, 29, var(--tw-border-opacity));
 }
+.border-red-800 {
+	--tw-border-opacity: 1;
+	border-color: rgba(153, 27, 27, var(--tw-border-opacity));
+}
 .border-white {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
-.border-red-800 {
+.border-blue-900 {
 	--tw-border-opacity: 1;
-	border-color: rgba(153, 27, 27, var(--tw-border-opacity));
+	border-color: rgba(30, 58, 138, var(--tw-border-opacity));
+}
+.border-blue-800 {
+	--tw-border-opacity: 1;
+	border-color: rgba(30, 64, 175, var(--tw-border-opacity));
+}
+.border-logo-blue {
+	--tw-border-opacity: 1;
+	border-color: rgba(52, 114, 223, var(--tw-border-opacity));
 }
 .border-yellow-600 {
 	--tw-border-opacity: 1;
@@ -1788,11 +1835,15 @@ select {
 	--tw-gradient-from: #7f1d1d;
 	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(127, 29, 29, 0));
 }
+.from-blue-900 {
+	--tw-gradient-from: #1e3a8a;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(30, 58, 138, 0));
+}
 .to-red-800 {
 	--tw-gradient-to: #991b1b;
 }
-.to-red-500 {
-	--tw-gradient-to: #ef4444;
+.to-blue-800 {
+	--tw-gradient-to: #1e40af;
 }
 .bg-cover {
 	background-size: cover;
@@ -1824,6 +1875,15 @@ select {
 }
 .p-1 {
 	padding: 0.25rem;
+}
+.p-0\.5 {
+	padding: 0.125rem;
+}
+.p-0 {
+	padding: 0px;
+}
+.p-8 {
+	padding: 2rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1881,10 +1941,6 @@ select {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
 }
-.px-20 {
-	padding-left: 5rem;
-	padding-right: 5rem;
-}
 .py-1\.5 {
 	padding-top: 0.375rem;
 	padding-bottom: 0.375rem;
@@ -1924,9 +1980,6 @@ select {
 }
 .pr-12 {
 	padding-right: 3rem;
-}
-.pt-20 {
-	padding-top: 5rem;
 }
 .pb-8 {
 	padding-bottom: 2rem;
@@ -1979,17 +2032,9 @@ select {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
-.text-6xl {
-	font-size: 3.75rem;
-	line-height: 1;
-}
 .text-3xl {
 	font-size: 1.875rem;
 	line-height: 2.25rem;
-}
-.text-5xl {
-	font-size: 3rem;
-	line-height: 1;
 }
 .text-4xl {
 	font-size: 2.25rem;
@@ -2107,6 +2152,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(29, 78, 216, var(--tw-text-opacity));
 }
+.text-yellow-500 {
+	--tw-text-opacity: 1;
+	color: rgba(245, 158, 11, var(--tw-text-opacity));
+}
 .text-blue-800 {
 	--tw-text-opacity: 1;
 	color: rgba(30, 64, 175, var(--tw-text-opacity));
@@ -2122,10 +2171,6 @@ select {
 .text-yellow-600 {
 	--tw-text-opacity: 1;
 	color: rgba(217, 119, 6, var(--tw-text-opacity));
-}
-.text-red-400 {
-	--tw-text-opacity: 1;
-	color: rgba(248, 113, 113, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2224,6 +2269,9 @@ select {
 .ease-in {
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+.text-shadow {
+	text-shadow: 0px 0px 1px rgb(0 0 0 / 20%), 0px 0px 1px rgb(1 0 5 / 10%);
+}
 .text-shadow-md {
 	text-shadow: 0px 1px 2px rgb(30 29 39 / 19%), 1px 2px 4px rgb(54 64 147 / 18%);
 }
@@ -2242,14 +2290,14 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
-.hover\:border-l-8:hover {
-	border-left-width: 8px;
+.hover\:border-l-4:hover {
+	border-left-width: 4px;
 }
-.hover\:border-t-8:hover {
-	border-top-width: 8px;
+.hover\:border-t-4:hover {
+	border-top-width: 4px;
 }
-.hover\:border-r-8:hover {
-	border-right-width: 8px;
+.hover\:border-r-4:hover {
+	border-right-width: 4px;
 }
 .hover\:border-gray-300:hover {
 	--tw-border-opacity: 1;
@@ -2282,6 +2330,10 @@ select {
 .hover\:bg-gray-50:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.hover\:bg-blue-100:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 .hover\:bg-red-700:hover {
 	--tw-bg-opacity: 1;
@@ -2365,9 +2417,17 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(4, 120, 87, var(--tw-border-opacity));
 }
+.focus\:border-blue-700:focus {
+	--tw-border-opacity: 1;
+	border-color: rgba(29, 78, 216, var(--tw-border-opacity));
+}
 .focus\:border-blue-900:focus {
 	--tw-border-opacity: 1;
 	border-color: rgba(30, 58, 138, var(--tw-border-opacity));
+}
+.focus\:border-white:focus {
+	--tw-border-opacity: 1;
+	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
 .focus\:bg-indigo-600:focus {
 	--tw-bg-opacity: 1;
@@ -2408,6 +2468,10 @@ select {
 .focus\:text-gray-500:focus {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+.focus\:text-white:focus {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 .focus\:outline-none:focus {
 	outline: 2px solid transparent;
@@ -2477,6 +2541,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
 }
+.active\:bg-blue-200:active {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+}
 .active\:bg-blue-900:active {
 	--tw-bg-opacity: 1;
 	background-color: rgba(30, 58, 138, var(--tw-bg-opacity));
@@ -2519,6 +2587,11 @@ select {
 	.sm\:-my-px {
 		margin-top: -1px;
 		margin-bottom: -1px;
+	}
+
+	.sm\:mx-4 {
+		margin-left: 1rem;
+		margin-right: 1rem;
 	}
 
 	.sm\:-mx-6 {
@@ -2592,6 +2665,10 @@ select {
 
 	.sm\:max-w-2xl {
 		max-width: 42rem;
+	}
+
+	.sm\:max-w-3xl {
+		max-width: 48rem;
 	}
 
 	.sm\:flex-1 {
@@ -2686,6 +2763,11 @@ select {
 		padding-right: 5rem;
 	}
 
+	.sm\:py-0 {
+		padding-top: 0px;
+		padding-bottom: 0px;
+	}
+
 	.sm\:pt-0 {
 		padding-top: 0px;
 	}
@@ -2708,6 +2790,10 @@ select {
 }
 @media (min-width: 768px) {
 
+	.md\:order-last {
+		order: 9999;
+	}
+
 	.md\:col-span-2 {
 		grid-column: span 2 / span 2;
 	}
@@ -2716,12 +2802,50 @@ select {
 		grid-column: span 1 / span 1;
 	}
 
+	.md\:mx-20 {
+		margin-left: 5rem;
+		margin-right: 5rem;
+	}
+
+	.md\:my-0 {
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+
 	.md\:mt-0 {
 		margin-top: 0px;
 	}
 
+	.md\:mb-12 {
+		margin-bottom: 3rem;
+	}
+
+	.md\:ml-8 {
+		margin-left: 2rem;
+	}
+
+	.md\:mb-0 {
+		margin-bottom: 0px;
+	}
+
+	.md\:flex {
+		display: flex;
+	}
+
 	.md\:grid {
 		display: grid;
+	}
+
+	.md\:hidden {
+		display: none;
+	}
+
+	.md\:h-52 {
+		height: 13rem;
+	}
+
+	.md\:h-160 {
+		height: 40rem;
 	}
 
 	.md\:grid-cols-3 {
@@ -2732,21 +2856,104 @@ select {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
+	.md\:flex-row {
+		flex-direction: row;
+	}
+
+	.md\:items-center {
+		align-items: center;
+	}
+
+	.md\:justify-between {
+		justify-content: space-between;
+	}
+
 	.md\:gap-6 {
 		gap: 1.5rem;
 	}
 
+	.md\:gap-4 {
+		gap: 1rem;
+	}
+
+	.md\:gap-3 {
+		gap: 0.75rem;
+	}
+
+	.md\:gap-36 {
+		gap: 9rem;
+	}
+
+	.md\:rounded-lg {
+		border-radius: 0.5rem;
+	}
+
 	.md\:border-t-0 {
-		border-top-width: 0px;
+		border-top-width: 0;
 	}
 
 	.md\:border-l {
 		border-left-width: 1px;
 	}
 
+	.md\:border-l-8 {
+		border-left-width: 8px;
+	}
+
+	.md\:border-t-8 {
+		border-top-width: 8px;
+	}
+
+	.md\:border-r-8 {
+		border-right-width: 8px;
+	}
+
+	.md\:p-0 {
+		padding: 0px;
+	}
+
+	.md\:pt-20 {
+		padding-top: 5rem;
+	}
+
+	.md\:text-left {
+		text-align: left;
+	}
+
+	.md\:text-justify {
+		text-align: justify;
+	}
+
+	.md\:text-6xl {
+		font-size: 3.75rem;
+		line-height: 1;
+	}
+
 	.md\:text-xl {
 		font-size: 1.25rem;
 		line-height: 1.75rem;
+	}
+
+	.md\:text-3xl {
+		font-size: 1.875rem;
+		line-height: 2.25rem;
+	}
+
+	.md\:text-5xl {
+		font-size: 3rem;
+		line-height: 1;
+	}
+
+	.md\:hover\:border-l-8:hover {
+		border-left-width: 8px;
+	}
+
+	.md\:hover\:border-t-8:hover {
+		border-top-width: 8px;
+	}
+
+	.md\:hover\:border-r-8:hover {
+		border-right-width: 8px;
 	}
 }
 @media (min-width: 1024px) {
@@ -2760,9 +2967,31 @@ select {
 		margin-right: -2rem;
 	}
 
+	.lg\:block {
+		display: block;
+	}
+
+	.lg\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.lg\:gap-4 {
+		gap: 1rem;
+	}
+
 	.lg\:px-8 {
 		padding-left: 2rem;
 		padding-right: 2rem;
+	}
+}
+@media (min-width: 1280px) {
+
+	.xl\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.xl\:gap-12 {
+		gap: 3rem;
 	}
 }
 
