--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1108,6 +1108,9 @@ select {
 .prose > :last-child {
 	margin-bottom: 0;
 }
+.invisible {
+	visibility: hidden;
+}
 .fixed {
 	position: fixed;
 }
@@ -1230,9 +1233,6 @@ select {
 .mt-1 {
 	margin-top: 0.25rem;
 }
-.ml-2 {
-	margin-left: 0.5rem;
-}
 .mb-6 {
 	margin-bottom: 1.5rem;
 }
@@ -1250,6 +1250,9 @@ select {
 }
 .ml-1 {
 	margin-left: 0.25rem;
+}
+.ml-2 {
+	margin-left: 0.5rem;
 }
 .-mr-0\.5 {
 	margin-right: -0.125rem;
@@ -1314,9 +1317,6 @@ select {
 .mt-16 {
 	margin-top: 4rem;
 }
-.mb-12 {
-	margin-bottom: 3rem;
-}
 .ml-0 {
 	margin-left: 0px;
 }
@@ -1325,6 +1325,9 @@ select {
 }
 .inline-block {
 	display: inline-block;
+}
+.inline {
+	display: inline;
 }
 .flex {
 	display: flex;
@@ -1368,11 +1371,8 @@ select {
 .h-20 {
 	height: 5rem;
 }
-.h-40 {
-	height: 10rem;
-}
-.h-160 {
-	height: 40rem;
+.h-32 {
+	height: 8rem;
 }
 .h-24 {
 	height: 6rem;
@@ -1422,14 +1422,11 @@ select {
 .w-10 {
 	width: 2.5rem;
 }
-.w-20 {
-	width: 5rem;
-}
 .w-1\/2 {
 	width: 50%;
 }
-.w-3\/5 {
-	width: 60%;
+.w-20 {
+	width: 5rem;
 }
 .w-96 {
 	width: 24rem;
@@ -1545,8 +1542,8 @@ select {
 .grid-cols-2 {
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
-.grid-cols-4 {
-	grid-template-columns: repeat(4, minmax(0, 1fr));
+.flex-row {
+	flex-direction: row;
 }
 .flex-col {
 	flex-direction: column;
@@ -1580,12 +1577,6 @@ select {
 }
 .gap-1 {
 	gap: 0.25rem;
-}
-.gap-28 {
-	gap: 7rem;
-}
-.gap-36 {
-	gap: 9rem;
 }
 .gap-8 {
 	gap: 2rem;
@@ -1873,17 +1864,14 @@ select {
 .p-10 {
 	padding: 2.5rem;
 }
+.p-0 {
+	padding: 0px;
+}
 .p-1 {
 	padding: 0.25rem;
 }
 .p-0\.5 {
 	padding: 0.125rem;
-}
-.p-0 {
-	padding: 0px;
-}
-.p-8 {
-	padding: 2rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1987,8 +1975,14 @@ select {
 .pl-4 {
 	padding-left: 1rem;
 }
+.pt-0 {
+	padding-top: 0px;
+}
 .pb-10 {
 	padding-bottom: 2.5rem;
+}
+.pt-52 {
+	padding-top: 13rem;
 }
 .text-left {
 	text-align: left;
@@ -2594,6 +2588,11 @@ select {
 		margin-right: 1rem;
 	}
 
+	.sm\:mx-1 {
+		margin-left: 0.25rem;
+		margin-right: 0.25rem;
+	}
+
 	.sm\:-mx-6 {
 		margin-left: -1.5rem;
 		margin-right: -1.5rem;
@@ -2816,6 +2815,14 @@ select {
 		margin-top: 0px;
 	}
 
+	.md\:mb-0 {
+		margin-bottom: 0px;
+	}
+
+	.md\:ml-20 {
+		margin-left: 5rem;
+	}
+
 	.md\:mb-12 {
 		margin-bottom: 3rem;
 	}
@@ -2824,8 +2831,8 @@ select {
 		margin-left: 2rem;
 	}
 
-	.md\:mb-0 {
-		margin-bottom: 0px;
+	.md\:block {
+		display: block;
 	}
 
 	.md\:flex {
@@ -2840,8 +2847,16 @@ select {
 		display: none;
 	}
 
-	.md\:h-52 {
-		height: 13rem;
+	.md\:h-28 {
+		height: 7rem;
+	}
+
+	.md\:h-20 {
+		height: 5rem;
+	}
+
+	.md\:h-128 {
+		height: 32rem;
 	}
 
 	.md\:h-160 {
@@ -2854,6 +2869,10 @@ select {
 
 	.md\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.md\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
 	}
 
 	.md\:flex-row {
@@ -2874,6 +2893,10 @@ select {
 
 	.md\:gap-4 {
 		gap: 1rem;
+	}
+
+	.md\:gap-28 {
+		gap: 7rem;
 	}
 
 	.md\:gap-3 {
@@ -2908,12 +2931,33 @@ select {
 		border-right-width: 8px;
 	}
 
+	.md\:p-10 {
+		padding: 2.5rem;
+	}
+
 	.md\:p-0 {
 		padding: 0px;
 	}
 
+	.md\:px-6 {
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+
 	.md\:pt-20 {
 		padding-top: 5rem;
+	}
+
+	.md\:pt-2 {
+		padding-top: 0.5rem;
+	}
+
+	.md\:pl-8 {
+		padding-left: 2rem;
+	}
+
+	.md\:pt-6 {
+		padding-top: 1.5rem;
 	}
 
 	.md\:text-left {
@@ -2929,9 +2973,19 @@ select {
 		line-height: 1;
 	}
 
+	.md\:text-4xl {
+		font-size: 2.25rem;
+		line-height: 2.5rem;
+	}
+
 	.md\:text-xl {
 		font-size: 1.25rem;
 		line-height: 1.75rem;
+	}
+
+	.md\:text-base {
+		font-size: 1rem;
+		line-height: 1.5rem;
 	}
 
 	.md\:text-3xl {
@@ -2939,9 +2993,19 @@ select {
 		line-height: 2.25rem;
 	}
 
-	.md\:text-5xl {
-		font-size: 3rem;
-		line-height: 1;
+	.md\:text-2xl {
+		font-size: 1.5rem;
+		line-height: 2rem;
+	}
+
+	.md\:text-sm {
+		font-size: 0.875rem;
+		line-height: 1.25rem;
+	}
+
+	.md\:text-lg {
+		font-size: 1.125rem;
+		line-height: 1.75rem;
 	}
 
 	.md\:hover\:border-l-8:hover {
@@ -2971,8 +3035,16 @@ select {
 		display: block;
 	}
 
+	.lg\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+
 	.lg\:grid-cols-4 {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.lg\:grid-cols-6 {
+		grid-template-columns: repeat(6, minmax(0, 1fr));
 	}
 
 	.lg\:gap-4 {
@@ -2986,12 +3058,117 @@ select {
 }
 @media (min-width: 1280px) {
 
-	.xl\:grid-cols-4 {
-		grid-template-columns: repeat(4, minmax(0, 1fr));
+	.xl\:h-116 {
+		height: 29rem;
 	}
 
 	.xl\:gap-12 {
 		gap: 3rem;
+	}
+
+	.xl\:text-3xl {
+		font-size: 1.875rem;
+		line-height: 2.25rem;
+	}
+}
+@media (min-width: 1536px) {
+
+	.\32xl\:mx-4 {
+		margin-left: 1rem;
+		margin-right: 1rem;
+	}
+
+	.\32xl\:my-20 {
+		margin-top: 5rem;
+		margin-bottom: 5rem;
+	}
+
+	.\32xl\:mt-12 {
+		margin-top: 3rem;
+	}
+
+	.\32xl\:ml-28 {
+		margin-left: 7rem;
+	}
+
+	.\32xl\:h-52 {
+		height: 13rem;
+	}
+
+	.\32xl\:h-180 {
+		height: 45rem;
+	}
+
+	.\32xl\:h-24 {
+		height: 6rem;
+	}
+
+	.\32xl\:h-160 {
+		height: 40rem;
+	}
+
+	.\32xl\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.\32xl\:grid-cols-10 {
+		grid-template-columns: repeat(10, minmax(0, 1fr));
+	}
+
+	.\32xl\:gap-4 {
+		gap: 1rem;
+	}
+
+	.\32xl\:p-8 {
+		padding: 2rem;
+	}
+
+	.\32xl\:px-6 {
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+
+	.\32xl\:pt-20 {
+		padding-top: 5rem;
+	}
+
+	.\32xl\:pl-0 {
+		padding-left: 0px;
+	}
+
+	.\32xl\:text-xl {
+		font-size: 1.25rem;
+		line-height: 1.75rem;
+	}
+
+	.\32xl\:text-6xl {
+		font-size: 3.75rem;
+		line-height: 1;
+	}
+
+	.\32xl\:text-2xl {
+		font-size: 1.5rem;
+		line-height: 2rem;
+	}
+
+	.\32xl\:text-5xl {
+		font-size: 3rem;
+		line-height: 1;
+	}
+
+	.\32xl\:text-3xl {
+		font-size: 1.875rem;
+		line-height: 2.25rem;
+	}
+
+	.\32xl\:text-base {
+		font-size: 1rem;
+		line-height: 1.5rem;
+	}
+
+	.\32xl\:text-4xl {
+		font-size: 2.25rem;
+		line-height: 2.5rem;
 	}
 }
 
